@@ -234,6 +234,8 @@ Trunk (unreleased changes)
 
 	BOOKKEEPER-479: Fix apache-rat issues in tree (ivank via fpj)
 
+        BOOKKEEPER-457: Create a format command for Hedwig to cleanup its metadata. (sijie via ivank)
+
       hedwig-client:
 
         BOOKKEEPER-306: Change C++ client to use gtest for testing (ivank via sijie)
